welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:10: error: Missing closing brace `}' assumed here
}
^